fix navbar bottom alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -242,7 +242,7 @@ blockquote {
 
 .navbar {
   position: absolute;
-  bottom: 0;      // align with bottom edge
+  bottom: 0; // align with bottom edge
   right: 0;
   width: 100%;
   z-index: 2;
@@ -400,7 +400,10 @@ blockquote {
 }
 
 .site-header nav {
-  position: relative;
+  position: absolute;
+  bottom: 0; // align with bottom edge
+  right: 0;
+  width: 100%;
   z-index: 1;
 }
 
